--- a/templates/partials/header/header.html
+++ b/templates/partials/header/header.html
@@ -110,7 +110,7 @@
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="" class="nav__link">
+                        <a href="{% url 'activation' %}" class="nav__link">
                             Новости и Акции
                         </a>
                     </li>
