--- a/templates/pages/404.html
+++ b/templates/pages/404.html
@@ -1,15 +1,15 @@
-{% load static %}
 <!DOCTYPE html>
-
+{% load static %}
 <html>
 <head>
 <title>404 – страница не найдена</title>
 <meta charset="utf-8">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <style type="text/css">
 html, body {width:100%;height:100%;overflow:hidden;margin:0px;padding:0px;font-family:'Open Sans',sans-serif;font-size:16px}
-body {background:url('/404.png') center no-repeat #fff}
+body {background:url('/404.png') <cen></cen>ter no-repeat #fff}
 .content {width:100%;text-align:center;position:absolute;bottom:10%;left:0px;}
 .content a {display:inline-block;text-decoration:none}
 .content a:hover {opacity:0.7}
@@ -22,11 +22,21 @@ body {background-size:cover}
 </style>
 </head>
 <body>
-<div class="content">
-	<img src="{% static 'img/png/delivery.png' %}" alt="#">
+<div >
+	<div class="content">
+			<img src="{% static 'img/png/404.png' %}">
+		<div class="content">
+			Ошибка 404. Такая страница не&nbsp;существует либо она была удалена.
+		</div>
+	</div>
+
 </div>
 <div class="content">
-	<a href="/"><h1>Перейти к главной странице</h1></a>
+	<a href="/">
+		<button class="btn btn-primary">
+				Перейти к главной странице
+		</button>
+	</a>
 </div>
 </body>
 </html>
