--- a/templates/partials/header/header.html
+++ b/templates/partials/header/header.html
@@ -1,5 +1,3 @@
-
-  
 {% load static %}
 
 <header class="header">
@@ -14,7 +12,7 @@
 
                 {% if request.user.is_authenticated %}
                     <div class="header__sign dropdown">
-                    <a href="" class="sign__in">
+                    <a href="{% url 'login' %}" class="sign__in">
 
                         <svg width="16" height="16" viewBox="0 0 16 16"
                              fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -110,12 +108,12 @@
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="{% url 'activation' %}" class="nav__link">
+                        <a href="" class="nav__link">
                             Новости и Акции
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="{% url 'logout' %}" class="nav__link">
+                        <a href="" class="nav__link">
                             F.A.Q
                         </a>
                     </li>
