--- a/templates/pages/sign.html
+++ b/templates/pages/sign.html
@@ -63,14 +63,14 @@
                         </div>
 
                         {% if form.password.errors%}
-                        <div style="" class="forget__password" data-micromodal-trigger="forget-password">
+                        <div  class="forget__password" data-micromodal-trigger="forget-password">
                             <span>Забыли пароль?</span>
                         </div>
                         {% endif %}
 
 
                     </div>
-                    <button type="submit" class="sign__btn" id="send">
+                    <button type="submit" class="sign__btn" >
                         Войти
                     </button>
                 </form>
@@ -83,6 +83,7 @@
             <img src="{% static 'img/png/delivery.png' %}" alt="">
         </div>
     </div>
+
 
 
 
@@ -100,16 +101,13 @@
                         На ваш email будет отправлено письмо
                         с ссылкой для смены пароля
                     </p>
-                    <form  action="" method="POST">
-                         {% csrf_token %}
+                    <form id="email-form" method="GET">
                         <div class="fields" id="field">
                             <label for="sign-email" class="sign__label">
-                                Текущий Email!!!!!!!
+                                Текущий Email
                             </label>
-
-<!--                            <input required type="text" id="sign-email" class="must sign__input"-->
-<!--                                   placeholder="Primer@gmail.com">-->
-                            {{ form1 }}
+                            <input required type="text" id="sign-email" class="must sign__input"
+                                   placeholder="Primer@gmail.com">
                         </div>
 
                         <button type="submit" name="email" id="send" class="personal__btn modal__btn">
@@ -117,11 +115,6 @@
                         </button>
                     </form>
                 </div>
-
-
-
-
-
 
                                     {#    модалка успешного отправления  #}
                 <div class="area__modal verify-modal" id="email-verify-modal" style="display: none; flex-direction: column; align-items: center; text-align: center;">
@@ -169,9 +162,7 @@ form.onsubmit = function(){
         let email = $('.must')[0].value;
 
         let data = {
-                let result = data['data']
             email: email
-                let result = data['data']
         }
         console.log(email);
 
@@ -181,10 +172,8 @@ form.onsubmit = function(){
             method:"GET",
             dataType: "json",
             data: data,
-            url: "",
+            url: "{% url "forgot-password" %}",
             success: function(data){
-                    console.log('Script is right');
-
                 let result = data['data']
                 if (result){
                     console.log(result);
@@ -203,10 +192,6 @@ form.onsubmit = function(){
     })
 </script>
 <script>
-<!-- $('#send').on('click', function (){-->
-<!--        MicroModal.show('edit-profile-success');-->
-<!--        })-->
-
-
+      MicroModal.show('edit-profile-success');
 </script>
 {% endblock %}
