--- a/templates/components/sidebar-menu/sidebar-menu.html
+++ b/templates/components/sidebar-menu/sidebar-menu.html
@@ -12,7 +12,7 @@
         </svg>
     </div>
     <div class="menu__links">
-        <a href="#" class="menu__link">
+        <a href="{% url 'profile' %}" class="menu__link">
                 <span class="icon">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                          xmlns="http://www.w3.org/2000/svg">
@@ -38,7 +38,7 @@
                     Отслеживание посылки
                 </span>
         </a>
-        <a href="#" class="menu__link">
+        <a href="{% url 'logout' %}" class="menu__link">
                 <span class="icon">
                     <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0)">
