--- a/templates/partials/header/header.html
+++ b/templates/partials/header/header.html
@@ -31,7 +31,7 @@
                     <div class="dropdown__wrap">
                         <div class="dropdown__item">
 
-                            <a href="" class="dropdown__link">
+                            <a href="{% url 'profile' %}" class="dropdown__link">
                                 <svg width="20" height="20" viewBox="0 0 20 20"
                                      fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
