--- a/templates/partials/header/header.html
+++ b/templates/partials/header/header.html
@@ -113,7 +113,7 @@
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="" class="nav__link">
+                        <a href="{% url 'art' %}" class="nav__link">
                             F.A.Q
                         </a>
                     </li>
