--- a/templates/partials/header/header.html
+++ b/templates/partials/header/header.html
@@ -46,7 +46,7 @@
                             </a>
 
 
-                            <a href="" class="dropdown__link">
+                            <a href="{% url 'parcels' %}" class="dropdown__link">
                                 <svg width="20" height="20" viewBox="0 0 20 20"
                                      fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
