--- a/templates/pages/sign.html
+++ b/templates/pages/sign.html
@@ -21,7 +21,8 @@
             <div class="sign__inner">
                 <div class="sign__head">
                     <div class="sign__logo">
-                        <img src="{% static 'img/png/logo.png' %}" alt="">
+
+                        <img src="{% static '/img/png/logo.png' %}" alt="">
                     </div>
                 </div>
                 <h2 class="sign__title">
