--- a/templates/partials/footer/footer.html
+++ b/templates/partials/footer/footer.html
@@ -19,7 +19,7 @@
                 <a href="#" class="footer__link">
                     Магазины
                 </a>
-                <a href="#" class="footer__link">
+                <a href="{% url 'shop' %}" class="footer__link">
                     О нас
                 </a>
             </div>
