--- a/templates/partials/header/header.html
+++ b/templates/partials/header/header.html
@@ -93,7 +93,7 @@
 
                 <ul class="header__nav">
                     <li class="nav__item">
-                        <a href="" class="nav__link">
+                        <a href="{% url 'shop' %}" class="nav__link">
                             О нас
                         </a>
                     </li>
